--- a/app/styles/archiveNewEntry.scss
+++ b/app/styles/archiveNewEntry.scss
@@ -3,19 +3,25 @@
 
 .newEntry {
   @include flex-center;
-  visibility: hidden;
-  background-color: $blue-dark-2;
-  position: fixed;
-  top: 0;
+  background-color: $blue-dark-3;
+  bottom: 0;
   left: 0;
-  right: 0;
-  //bottom: 0;
-  height: 100%;
-  z-index: 1;
-  padding: $layout-xs-sm-padding;
-  //padding-top: $header-height-xs;
   opacity: 0;
+  padding: $header-padding-xs;
+  position: absolute;
+  right: 0;
+  top: 0;
   transition: opacity $time-new-entry, visibility 0s $time-new-entry;
+  visibility: hidden;
+  z-index: 1;
+
+  @media only screen and (min-width: $media-md) {
+    padding: $header-padding-md;
+  }
+
+  @media only screen and (min-width: $media-lg) {
+    padding: $header-padding-lg;
+  }
 
   &--visible {
     visibility: visible;
@@ -24,81 +30,26 @@
   }
 
   &__container {
-    display: grid;
-    width: 100%;
-    max-height: 100%;
-    grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: repeat(11, 1fr);
-    //grid-auto-rows: 60px;
-    justify-items: center;
+    align-content: center;
+    justify-content: center;
     align-items: center;
+    display: grid;
+    gap: 20px;
     grid-template-areas:
-      ". . emoji emoji emoji"
-      ". . emoji emoji emoji"
-      ". . emoji emoji emoji"
-      "value value value value ."
-      "value value value value ."
-      "value value value value ."
-      "value value value value ."
-      "down down . up up"
-      "down down . up up"
-      "cancel cancel . save save"
-      "cancel cancel . save save";
-    grid-row-gap: 1rem;
-  }
-
-  &__display {
-    @include flex-center;
-    flex-direction: column;
-    grid-area: value;
-    border: 4px solid $blue-light-2;
-    background-color: $blue-dark-3;
-    //margin: -10px 0;
-    border-radius: 50%;
-    color: $blue;
-    box-shadow:
-      0 0 15px rgba($color: $blue, $alpha: 0.5),
-      inset 0 0 30px rgba($color: $blue, $alpha: 0.6);
+    "day    day "
+    "date   date"
+    "tenths ones";
+    grid-template-columns: repeat(2, 1fr);
+    justify-items: center;
+    max-width: $tab-maxWidth;
     width: 100%;
-    height: 100%;
-  }
-
-  &__value {
-    margin: 0;
-    font-size: 4rem;
-    font-weight: bold;
   }
 
   &__day {
-    margin: 0;
-    text-transform: capitalize;
+
   }
 
   &__date {
-    margin: 0;
-  }
-
-  &__button {
-    @include button;
-    @include flex-center;
-    width: 100%;
-    height: 100%;
-    fill: $blue;
-
-    &:hover {
-      fill: $blue-light-2;
-    }
-
-    &--decrease { grid-area: down; };
-    &--increase { grid-area: up; };
-    &--cancel { grid-area: cancel; };
-    &--save { grid-area: save; };
-    &--date { grid-area: date; };
-  }
-
-  &__svg {
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
+    
   }
 }
