--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -13,15 +13,15 @@
 @import 'logo.scss';
 @import 'tabs.scss';
 @import 'buttons.scss';
+@import 'counter.scss';
 @import 'emoji.scss';
 @import 'cards.scss';
 @import 'edition.scss';
+@import 'controls.scss';
 
 @import 'archiveEntry.scss';
 @import 'archiveNewEntry.scss';
 
-@import 'landingControls.scss';
-@import 'landingCounter.scss';
 @import 'landingGraph.scss';
 @import 'landingWater.scss';
 
