--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -1,6 +1,6 @@
 //#region [ Horizon ] COLORS
 // BLUE
-$blue-dark-5: #041927a4;
+$blue-dark-5: #071d2c;
 $blue-dark-4: #102a3d;
 $blue-dark-3: #112f44;
 $blue-dark-2: #1d445f;
