--- a/app/styles/controls.scss
+++ b/app/styles/controls.scss
@@ -7,19 +7,11 @@
   padding: $header-padding-xs;
   position: fixed;
   right: 0;
-  row-gap: $controls-gap-xs;
+  gap: $controls-gap-xs;
   z-index: 1;
 
-  &__button {
-    @include button;
-    @include flex-center;
-    fill: $blue;
-    width: $burgerBtn-size-xs;
-  }
-
-  &__svg {
-    pointer-events: none;
-    width: 100%;
+  &--newEntry {
+    grid-template-columns: repeat(2, auto);
   }
 
   @media only screen and (min-width: $media-md) {
@@ -27,11 +19,7 @@
     & {
       padding: $header-padding-md;
       position: absolute;
-      row-gap: $controls-gap-md;
-    
-      &__button {
-        width: $burgerBtn-size-md;
-      }
+      gap: $controls-gap-md;
     }
   }
 
@@ -39,11 +27,7 @@
 
     & {
       padding: $header-padding-lg;
-      row-gap: $controls-gap-lg;
-    
-      &__button {
-        width: $burgerBtn-size-lg;
-      }
+      gap: $controls-gap-lg;
     }
   }
 }
