--- a/app/styles/counter.scss
+++ b/app/styles/counter.scss
@@ -6,18 +6,29 @@
   align-items: center;
   column-gap: 3vw;
   display: grid;
-  grid-template-areas:
-  "day     day    "
-  "date    date   "
-  "tenths  ones   "
-  "message message";
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: 1fr 1fr auto 2fr;
   height: 100%;
-  margin: 0 $header-height + 5px;
   max-width: 300px;
   width: 100%;
   z-index: 1;
+
+  &--landing {
+    grid-template-areas:
+    "day     day    "
+    "date    date   "
+    "tenths  ones   "
+    "message message";
+    margin: 0 $header-height + 5px;
+  }
+
+  &--newEntry {
+    grid-template-areas:
+    "day     day    "
+    "date    date   "
+    "tenths  ones   ";
+    margin: 0 $header-padding-xs;
+  }
 
   &__day,
   &__date,
@@ -34,6 +45,10 @@
     font-size: 1.8em;
     grid-area: day;
     text-transform: capitalize;
+
+    &--newEntry {
+      color: $blue-light-2;
+    }
   }
 
   &__date {
@@ -41,6 +56,10 @@
     color: $blue;
     font-size: 1.3em;
     grid-area: date;
+
+    &--newEntry {
+      color: $blue;
+    }
   }
 
   &__message {
@@ -53,6 +72,15 @@
     & {
       column-gap: 10px;
       max-width: 350px;
+
+      &--landing {
+        $header-height: $header-padding-md * 2 + $burgerBtn-size-md;
+        margin: 0 $header-height;
+      }
+
+      &--newEntry {
+        margin: 0 $header-padding-md;
+      }
 
       &__day {
         font-size: 2.5em;
@@ -75,9 +103,21 @@
       column-gap: 15px;
       max-width: 400px;
 
+      &--landing {
+        $header-height: $header-padding-lg * 2 + $burgerBtn-size-lg;
+        margin: 0 $header-height;
+      }
+
+      &--newEntry {
+        margin: 0 $header-padding-lg;
+      }
+
       &__day {
         font-size: 3.5em;
 
+        &--newEntry {
+          font-size: 3em;
+        }
       }
 
       &__date {
@@ -116,12 +156,14 @@
 
   &__svg {
     border-radius: 10px;
-    fill: $blue;
     height: 100%;
     opacity: 1;
     transform: rotateX(0);
     transform-origin: center top;
     width: 100%;
+
+    &--landing { fill: $blue; }
+    &--newEntry { fill: $blue-dark-1; }
 
     &--rotatedNext {
       transform: rotateX(270deg);
