--- a/app/styles/counter.scss
+++ b/app/styles/counter.scss
@@ -7,7 +7,6 @@
   column-gap: 3vw;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr 1fr auto 2fr;
   height: 100%;
   max-width: 300px;
   width: 100%;
@@ -19,15 +18,28 @@
     "date    date   "
     "tenths  ones   "
     "message message";
+    grid-template-rows: 1fr 1fr auto 2fr;
     margin: 0 $header-height + 5px;
   }
 
   &--newEntry {
     grid-template-areas:
-    "day     day    "
-    "date    date   "
-    "tenths  ones   ";
-    margin: 0 $header-padding-xs;
+    "head   head"
+    "day    day "
+    "date   date"
+    "tenths ones"
+    ".      .   ";
+    grid-template-rows: repeat(4, 1fr) 3fr;
+    margin: 0;
+    max-width: $tab-maxWidth;
+  }
+
+  &__heading {
+    color: $blue-dark-1;
+    font-size: 1.2em;
+    grid-area: head;
+    margin: 0;
+    text-align: center;
   }
 
   &__day,
@@ -79,7 +91,12 @@
       }
 
       &--newEntry {
-        margin: 0 $header-padding-md;
+        max-width: $tab-maxWidth;
+        width: 100%;
+      }
+
+      &__heading {
+        font-size: 1.5em;
       }
 
       &__day {
@@ -109,19 +126,27 @@
       }
 
       &--newEntry {
-        margin: 0 $header-padding-lg;
+        max-width: $tab-maxWidth;
+      }
+
+      &__heading {
+        font-size: 1.8em;
       }
 
       &__day {
         font-size: 3.5em;
 
         &--newEntry {
-          font-size: 3em;
+          font-size: 2.7em;
         }
       }
 
       &__date {
         font-size: 2.5em;
+
+        &--newEntry {
+          font-size: 2.3em;
+        }
       }
 
       &__message {
