--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -46,7 +46,7 @@ $controls-gap-md: 15px;
 $controls-gap-lg: 20px;
 $header-height-xs: $header-padding-xs * 2 + $burgerBtn-size-xs;
 $header-height-md: $header-padding-md * 2 + $burgerBtn-size-md;
-$header-height-xs: $header-padding-lg * 2 + $burgerBtn-size-lg;
+$header-height-lg: $header-padding-lg * 2 + $burgerBtn-size-lg;
 
 $logo-aspect-ratio: 512 / 135;
 //#endregion
@@ -59,9 +59,9 @@ $water-measure-size-lg: 5px;
 //#endregion
 
 //#region [ Horizon ] SIDEBAR
-$header-height-xs: $header-padding-xs * 2 + $burgerBtn-size-xs;
-$header-height-md: $header-padding-md * 2 + $burgerBtn-size-md;
-$header-height-lg: $header-padding-lg * 2 + $burgerBtn-size-lg;
+$sidebar-width-xs: 100%;
+$sidebar-width-md: 50%;
+$sidebar-width-lg: 40%;
 $sidebar-toggle: 0.4s;
 //#endregion
 
@@ -96,7 +96,7 @@ $time-edit-buttons: 0.5s;
 $time-week-slide: 0.5s;
 $time-week-entries: 0.6s;
 
-$time-new-entry: 0.5s;
+$time-newEntry: 0.4s;
 //#endregion
 
 $verticalTranslation: 1s cubic-bezier(0.5,-0.5,0.5,1.5);
