feat(intro): set initial structure and styles of app intro animation

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'animations.scss';
 
 @import 'overall.scss';
+@import 'intro.scss';
 @import 'app.scss';
 @import 'logo.scss';
 @import 'tabs.scss';
@@ -18,12 +19,12 @@
 @import 'cards.scss';
 @import 'edition.scss';
 @import 'controls.scss';
+@import 'water.scss';
 
 @import 'archiveEntry.scss';
 @import 'archiveNewEntry.scss';
 
 @import 'landingGraph.scss';
-@import 'landingWater.scss';
 
 @import 'usersList.scss';
 @import 'newUser.scss';
