feat(archive): reset archive newEntryCounter each time when enabled

--- a/app/styles/intro.scss
+++ b/app/styles/intro.scss
@@ -1,6 +1,14 @@
 @import 'variables.scss';
 @import 'mixins.scss';
 
+@keyframes upAndDown {
+  0% { transform: translateY(0) rotate(0); }
+  25% { transform: translateY(-50%) rotate(3deg); }
+  50% { transform: translateY(0) rotate(0); }
+  75% { transform: translateY(-50%) rotate(-5deg); }
+  100% { transform: translateY(0) rotate(0); }
+}
+
 .intro {
   @include flex-center;
   background-color: $blue;
@@ -10,18 +18,22 @@
   right: 0;
   top: 0;
   z-index: 2;
+  display: none;
 
   &__logo {
     @include flex-center;
     position: relative;
     width: 60%;
     z-index: -3;
+    display: none;
   }
   
   &__svg {
-    fill: $blue-dark-2;
+    fill: $blue-dark-3;
     pointer-events: all;
     width: 100%;
+    animation: upAndDown 5s ease-in-out infinite;
+    transform-origin: center center;
 
     &--color {
       fill: $blue-light-3;
