--- a/app/styles/archiveEntry.scss
+++ b/app/styles/archiveEntry.scss
@@ -53,16 +53,9 @@
   
   &__button {
     @include button;
-    margin: 0;
-    padding: 0.6rem 0.8rem;
-    font-weight: bold;
-    color: $blue-light-2;
-    border-radius: 5px;
-    transition: background-color $time-hover-effect;
-    
-    &:hover {
-      background-color: $blue;
-    }
+    @include primaryButton;
+
+    margin-top: 10px;
   }
 
   &__svg {
