feat: handle counter messages and emoji appearance

--- a/app/styles/emoji.scss
+++ b/app/styles/emoji.scss
@@ -2,59 +2,61 @@
 @import 'mixins.scss';
 
 .emoji {
-  @include flex-center;
-  height: $cardIcon-size-xs;
-  overflow: hidden;
-  position: relative;
-  width: $cardIcon-size-xs;
 
-  &--controls,
-  &--newEntry {
-    height: $burgerBtn-size-xs;
-    width: $burgerBtn-size-xs;
-  }
+  &__container {
+    @include flex-center;
+    overflow: hidden;
+    height: $cardIcon-size-xs;
+    width: $cardIcon-size-xs;
+    position: relative;
 
-  &--new {
-    grid-area: emoji;
-    height: 100%;
-    width: 100%;
-  }
-
-  @media only screen and (min-width: $media-sm) {
-
-    & {
-      height: $cardIcon-size-sm;
-      width: $cardIcon-size-sm;
-
-      &--controls,
-      &--newEntry {
-        height: $burgerBtn-size-xs;
-        width: $burgerBtn-size-xs;
+    &--controls,
+    &--newEntry {
+      height: $burgerBtn-size-xs;
+      width: $burgerBtn-size-xs;
+    }
+  
+    &--new {
+      grid-area: emoji;
+      height: 100%;
+      width: 100%;
+    }
+  
+    @media only screen and (min-width: $media-sm) {
+  
+      & {
+        height: $cardIcon-size-sm;
+        width: $cardIcon-size-sm;
+  
+        &--controls,
+        &--newEntry {
+          height: $burgerBtn-size-xs;
+          width: $burgerBtn-size-xs;
+        }
       }
     }
-  }
-
-  @media only screen and (min-width: $media-md) {
-
-    &--controls,
-    &--newEntry {
-      height: $burgerBtn-size-md;
-      width: $burgerBtn-size-md;
-    }
-  }
   
-  @media only screen and (min-width: $media-lg) {
-
-    &--controls,
-    &--newEntry {
-      height: $burgerBtn-size-lg;
-      width: $burgerBtn-size-lg;
+    @media only screen and (min-width: $media-md) {
+  
+      &--controls,
+      &--newEntry {
+        height: $burgerBtn-size-md;
+        width: $burgerBtn-size-md;
+      }
+    }
+    
+    @media only screen and (min-width: $media-lg) {
+  
+      &--controls,
+      &--newEntry {
+        height: $burgerBtn-size-lg;
+        width: $burgerBtn-size-lg;
+      }
     }
   }
 
   &__svg {
     @include flex-center;
-    fill: $warm-yellow;
     height: 100%;
     left: 0;
     opacity: 0;
@@ -65,14 +67,14 @@
     visibility: hidden;
     width: 100%;
     
-    &--emo-0 { fill: $warm-red; }
-    &--emo-1 { fill: $warm-red; }
-    &--emo-2 { fill: $warm-dark-orange; }
-    &--emo-3 { fill: $warm-dark-orange; }
-    &--emo-4 { fill: $warm-orange; }
-    &--emo-5 { fill: $warm-orange; }
-    &--emo-6 { fill: $warm-light-orange; }
-    &--emo-7 { fill: $warm-light-orange; }
+    &--emo-0 { fill: $orange-dark-2; }
+    &--emo-1 { fill: $orange-dark-1; }
+    &--emo-2 { fill: $orange-dark-1; }
+    &--emo-3 { fill: $orange; }
+    &--emo-4 { fill: $orange; }
+    &--emo-5 { fill: $orange-light-1; }
+    &--emo-6 { fill: $orange-light-1; }
+    &--emo-7 { fill: $orange-light-2; }
   
     &--visible {
       opacity: 1;
