--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -10,11 +10,11 @@ $blue-light-1: #549dc4;
 $blue-light-2: #75b3d4;
 $blue-light-3: #d3f3ff;
 // WARM
-$warm-red: #aa494c;
-$warm-dark-orange: #ba6353;
-$warm-orange: #d68960;
-$warm-light-orange: #e2b673;
-$warm-yellow: #edcf84;
+$orange-dark-2: #aa494c;
+$orange-dark-1: #ba6353;
+$orange: #d68960;
+$orange-light-1: #e2b673;
+$orange-light-2: #edcf84;
 //#endregion
 
 //#region [ Horizon ] MEDIA
