--- a/app/styles/landingGraph.scss
+++ b/app/styles/landingGraph.scss
@@ -27,7 +27,7 @@
     padding: 0.5em 0.8em 0.5em 2.5em;
     position: absolute;
     transform: translateY(50%);
-    transition: bottom $verticalTranslation;
+    transition: bottom 1s $bezier;
     z-index: -1;
   
     &--avg {
