--- a/app/styles/water.scss
+++ b/app/styles/water.scss
@@ -1,4 +1,5 @@
 @import 'variables.scss';
+@import 'animations.scss';
 @import 'mixins.scss';
 
 .water {
@@ -8,20 +9,15 @@
   pointer-events: none;
   position: absolute;
   right: 0;
-  transition:
-    opacity 0.5s,
-    top $verticalTranslation,
-    visibility 0s;
+  top: 100%;
+  transition: top 1s;
+  transition-timing-function: $bezier;
+  transform-origin: center center;
   width: 100%;
   z-index: -1;
-  
-  &--shake {
-    animation: shake alternate;
-  }
 
   &--back {
     background-color: $blue-dark-2;
-    top: 45%;
     z-index: -4;
   }
   &--back.water--intro {
@@ -30,7 +26,6 @@
 
   &--center {
     background-color: $blue-dark-3;
-    top: 50%;
     z-index: -2;
   }
   &--center.water--intro {
@@ -39,7 +34,6 @@
 
   &--front {
     background-color: $blue-dark-4;
-    top: 60%;
   }
   &--front.water--intro {
     background-color: $blue-dark-3;
@@ -54,15 +48,36 @@
     right: 0;
     width: 100%;
   }
-
-  &--hidden {
-    opacity: 0;
-    visibility: hidden;
-    transition:
-      opacity 0.5s,
-      top $verticalTranslation,
-      visibility 0s 0.5s;
+  &--front.water--intro::after {
+    background-color: $blue-dark-3;
   }
+  
+  &--shake {
+    animation: shake;
+  }
+  
+  &--front.water--fadeIn {
+    animation:
+      frontBounceIn 3s ease-in-out,
+      wavesVertical 1.5s alternate infinite ease-in-out 3s;
+    animation-fill-mode: forwards;
+  }
+  &--center.water--fadeIn {
+    animation:
+      centerBounceIn 3s ease-in-out 0.2s,
+      wavesVertical 1.5s alternate infinite ease-in-out 3.4s;
+    animation-fill-mode: forwards;
+  }
+  &--back.water--fadeIn {
+    animation:
+      backBounceIn 3s ease-in-out 0.4s,
+      wavesVertical 1.5s alternate infinite ease-in-out 4s;
+    animation-fill-mode: forwards;
+  }
+
+  /* &--fadeOut {
+    top: 0;
+  } */
 }
 
 .waves {
