--- a/app/styles/animations.scss
+++ b/app/styles/animations.scss
@@ -38,8 +38,8 @@
 }
 
 @keyframes wavesVertical {
-  0%   { transform: translateY(0); }
-  100% { transform: translateY(30px); }
+  0%   { transform: translateY(0); animation-timing-function: ease-in-out; }
+  100% { transform: translateY(30px); animation-timing-function: ease-in-out; }
 }
 
 @keyframes frontBounceIn {
@@ -65,4 +65,20 @@
   60%  { top: 35%; transform: skewY(-2deg); }
   80%  { top: 45%; transform: skewY(1deg); }
   100% { top: 40%; transform: skewY(0); }
+}
+
+@keyframes frontBounceOut {
+  0%   { top: 65%; animation-timing-function: ease-in-out; }
+  50%  { top: 90%; animation-timing-function: ease-in; }
+  100% { top: 0%; }
+}
+@keyframes centerBounceOut {
+  0%   { top: 50%; animation-timing-function: ease-in-out; }
+  50%  { top: 85%; animation-timing-function: ease-in; }
+  100% { top: 0%; }
+}
+@keyframes backBounceOut {
+  0%   { top: 40%; animation-timing-function: ease-in-out; }
+  50%  { top: 80%; animation-timing-function: ease-in; }
+  100% { top: 0%; }
 }
