feat(water): do not scale water waves when toggling sidebar

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -20,11 +20,11 @@
 @import 'edition.scss';
 @import 'controls.scss';
 @import 'water.scss';
+@import 'graph.scss';
 
 @import 'archiveEntry.scss';
 @import 'archiveNewEntry.scss';
 
-@import 'landingGraph.scss';
 
 @import 'usersList.scss';
 @import 'newUser.scss';
