--- a/app/styles/graph.scss
+++ b/app/styles/graph.scss
@@ -6,7 +6,7 @@
   height: 100%;
   left: 0;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100%;
   
@@ -25,7 +25,7 @@
     font-size: 0.8em;
     left: 0;
     padding: 0.5em 0.8em 0.5em 2.5em;
-    position: absolute;
+    position: fixed;
     transform: translateY(50%);
     transition: bottom 1s $bezier;
     z-index: -1;
