feat(login): add new html structure of loginBox

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,6 +10,8 @@
 
 @import 'overall.scss';
 @import 'intro.scss';
+@import 'loginBox.scss';
+@import 'newUser.scss';
 @import 'app.scss';
 @import 'logo.scss';
 @import 'tabs.scss';
@@ -25,7 +27,4 @@
 @import 'archiveEntry.scss';
 @import 'archiveNewEntry.scss';
 
-
-@import 'usersList.scss';
-@import 'newUser.scss';
 @import 'userProps.scss';
