--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -127,7 +127,7 @@
     }
   }
 
-  &__userProfile {
+  &__user {
     background-color: $blue-dark-3;
     bottom: 0;
     left: 0;
@@ -143,25 +143,6 @@
       opacity: 1;
       transition: opacity $newUser-toggle, visibility 0s;
       visibility: visible;
-    }
-  }
-  
-  &__logIn {
-    @include flex-center;
-    flex-direction: column;
-    height: 100%;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    top: 0;
-    transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
-    visibility: hidden;
-    width: 100%;
-
-    &--visible {
-      opacity: 1;
-      visibility: inherit;
-      transition: opacity $newUser-toggle, visibility 0s;
     }
   }
   
