--- a/app/styles/loginBox.scss
+++ b/app/styles/loginBox.scss
@@ -2,16 +2,25 @@
 @import 'mixins.scss';
 
 .loginBox {
-  @include flex-center;
-  flex-direction: column;
+  align-content: center;
+  display: grid;
+  gap: 30px;
+  grid-template-areas:
+    "heading"
+    "label  "
+    "input  "
+    "alert  "
+    "logIn  "
+    "signUp ";
   height: 100%;
-  left: 0;
+  max-width: $newUser-box-maxWidth;
   opacity: 0;
-  position: fixed;
+  padding: 0 20px;
+  position: absolute;
   top: 0;
   transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
   visibility: hidden;
-  width: 100%; 
+  width: 100%;
 
   &--visible {
     opacity: 1;
@@ -19,38 +28,109 @@
     transition: opacity $newUser-toggle, visibility 0s;
   }
   
-  &__heading {
-    font-size: 2em;
-    margin: 0.5em 0;
-  }
-}
-
-/* .usersList {
-  background-color: $blue-dark-3;
-  list-style-type: none;
-  margin: 0;
-  overflow: auto;
-  padding: 0;
-  width: 100%;
-
-  &__button {
-    @include button;
-    color: $blue-light-2;
-    font-size: 1.6em;
-    padding: 10px;
-    width: 100%;
-
-    &:hover {
-      background-color: $blue;
-    }
-  }
-
   @media only screen and (min-width: $media-md) {
 
     & {
-      border-radius: $br-items;
-      max-height: 400px;
-      max-width: $newUser-box-maxWidth;
+      grid-template-areas:
+        "heading heading"
+        "label   label  "
+        "input   input  "
+        "alert   alert  "
+        "logIn   signUp ";
+      grid-template-columns: repeat(2, 1fr);
+      padding: 0;
     }
   }
-} */
+  
+  &__heading {
+    color: $blue-light-2;
+    font-size: 2.2em;
+    grid-area: heading;
+    margin: 0;
+    text-align: center;
+  }
+
+  &__label {
+    color: $blue-dark-1;
+    font-size: 1.1em;
+    font-weight: 700;
+    grid-area: label;
+    text-align: center;
+  }
+
+  &__input {
+    background-color: transparent;
+    border: 2px solid $blue;
+    border-radius: 100px;
+    color: $blue-light-3;
+    font-size: 1.4em;
+    grid-area: input;
+    min-height: 50px;
+    min-width: 100px;
+    outline: none;
+    padding: 10px 20px;
+    text-align: center;
+  
+    &:focus {
+      border-color: $blue-light-3;
+    }
+  
+    @media only screen and (min-width: $media-md) {
+  
+      & {
+        min-height: 60px;
+      }
+    }
+  }
+
+  &__alert {
+    grid-area: alert;
+    height: 0;
+    overflow: hidden;
+    transition: height $time-alert;
+  }
+
+  &__alertText {
+    background-color: $blue-dark-5;
+    border-radius: 100px;
+    color: $blue;
+    font-size: 1.2em;
+    font-weight: 700;
+    line-height: 1.4;
+    margin: 0;
+    padding: 0.5em;
+    text-align: center;
+  }
+
+  &__button {
+    @include button;
+    @include flex-center;
+    background-color: $blue-dark-1;
+    border-radius: 100px;
+    color: $blue-dark-4;
+    font-weight: 700;
+    font-size: 1.3em;
+    padding: 0.5em;
+  
+    &:hover {
+      background-color: $blue-dark-5;
+      color: $blue-light-3;
+    }
+  
+    &--logIn {
+      background-color: $blue;
+      grid-area: logIn;
+    }
+  
+    &--signUp {
+      grid-area: signUp;
+    }
+  
+    @media only screen and (min-width: $media-md) {
+  
+      & {
+        font-size: 1.5em;
+      }
+    }
+  }
+}
