--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -97,6 +97,8 @@ $time-week-slide: 0.5s;
 $time-week-entries: 0.6s;
 
 $time-newEntry: 0.4s;
+
+$time-alert: 0.3s;
 //#endregion
 
 $size-main-buttons: 30px;
