feat(settings): add structure and style of user remove confirm window

--- a/app/styles/tabs.scss
+++ b/app/styles/tabs.scss
@@ -72,6 +72,10 @@
     }
   }
 
+  &__wrapper {
+    position: relative;
+  }
+
   &__container {
     display: flex;
     background-color: $blue-dark-2;
