--- a/app/styles/cards.scss
+++ b/app/styles/cards.scss
@@ -130,7 +130,9 @@
   }
 }
 
-.remove {
+//#region [ HorizonDark ] USER REMOVE
+
+.userRemove {
   background-color: $orange-dark-2;
   bottom: 0;
   display: grid;
@@ -142,10 +144,19 @@
   justify-items: center;
   left: 0;
   overflow: hidden;
+  opacity: 0;
   padding: $header-padding-xs;
   position: absolute;
   right: 0;
   top: 0;
+  transition: opacity $sidebar-toggle, visibility 0s $sidebar-toggle;
+  visibility: hidden;
+
+  &--visible {
+    opacity: 1;
+    transition: opacity $sidebar-toggle, visibility 0s;
+    visibility: visible;
+  }
 
   &__alert {
     align-self: end;
@@ -168,7 +179,6 @@
 
     &:hover {
       fill: $orange-dark-3;
-
     }
   }
 
@@ -190,7 +200,6 @@
 
   &__svg {
     width: 100%;
-    height: 100%;
   }
     
   @media only screen and (min-width: $media-md) {
@@ -207,3 +216,5 @@
     }
   }
 }
+
+//#endregion
