--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -128,10 +128,13 @@
   }
 
   &__user {
-    @include flex-center;
+    align-items: flex-start;
     background-color: $blue-dark-3;
     bottom: 0;
+    display: flex;
+    justify-content: center;
     left: 0;
+    min-height: 400px;
     opacity: 0;
     position: fixed;
     right: 0;
@@ -152,7 +155,7 @@
     height: 100%;
     left: 0;
     opacity: 0;
-    position: fixed;
+    position: absolute;
     top: 0;
     transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
     visibility: hidden;
