--- a/app/styles/newUser.scss
+++ b/app/styles/newUser.scss
@@ -9,10 +9,11 @@
   "alert alert"
   "prev  next ";
   grid-template-columns: repeat(2, 1fr);
-  margin: 0 20px;
   opacity: 0;
+  padding: 0 20px;
+  padding-top: 20px;
   position: absolute;
-  row-gap: 20px;
+  row-gap: 30px;
   visibility: hidden;
 
   &--visible {
@@ -29,7 +30,7 @@
   }
 
   &__label {
-    color: $blue;
+    color: $blue-light-2;
     font-weight: 700;
     font-size: 1.4em;
     grid-area: label;
@@ -55,7 +56,7 @@
     background-color: transparent;
     border: 2px solid $blue;
     border-radius: 50px;
-    color: $blue-light-2;
+    color: $blue-light-3;
     font-size: 1.4em;
     grid-area: input;
     min-height: 50px;
@@ -64,7 +65,7 @@
     text-align: center;
 
     &:focus {
-      border-color: $blue-light-2;
+      border-color: $blue-light-3;
     }
 
     @media only screen and (min-width: $media-md) {
@@ -83,18 +84,21 @@
   }
 
   &__alertText {
-    background-color: $blue-dark-3;
-    border-radius: 10px;
+    background-color: $blue-dark-5;
+    border-radius: 100px;
+    color: $blue;
+    font-size: 1.2em;
+    font-weight: 700;
     line-height: 1.4;
     margin: 0;
-    padding: 10px;
+    padding: 0.5em;
     text-align: center;
   }
 
   &__button {
     @include button;
     @include flex-center;
-    fill: $blue;
+    fill: $blue-dark-1;
     width: $burgerBtn-size-xs;
 
     &--prev {
@@ -110,7 +114,7 @@
     }
 
     &:hover {
-      fill: $blue-light-2;
+      fill: $blue-light-3;
     }
 
     @media only screen and (min-width: $media-md) {
