feat(ranking): add transition effect when user badge appears

--- a/app/styles/userProps.scss
+++ b/app/styles/userProps.scss
@@ -20,6 +20,10 @@
     grid-template-columns: auto 1fr auto;
   }
 
+  &--updated {
+    background-color: $blue-dark-3;
+  }
+
   &--editMode {
     background-color: $blue-dark-3;
   }
