feat(sidebar): toggle buttons focusability on tap button click

--- a/app/styles/overall.scss
+++ b/app/styles/overall.scss
@@ -10,9 +10,8 @@
 
 html {
   box-sizing: border-box;
-  scroll-behavior: smooth;
   touch-action: manipulation;
-  -webkit-tap-highlight-color: transparent;
+  //-webkit-tap-highlight-color: transparent;
 }
 
 *,
@@ -29,5 +28,5 @@ body {
 }
 
 input {
-  outline: none;
+  //outline: none;
 }
