--- a/app/styles/graph.scss
+++ b/app/styles/graph.scss
@@ -31,16 +31,17 @@
     z-index: -1;
   
     &--avg {
-      background-color: $blue-light-1;
+      background-color: rgba($color: $orange-light-3, $alpha: 0.8);
+      color: $blue;
     }
 
     &--min {
-      background-color: $blue-dark-1;
-      color: $blue-dark-5;
+      background-color: rgba($color: $blue-dark-1, $alpha: 0.8);
+      color: $blue;
     }
   
     &--negative {
-      background-color: $orange-dark-2;
+      background-color: rgba($color: $orange-dark-2, $alpha: 0.8);
       color: $blue-light-3;
     }
 
