--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -2,9 +2,9 @@
 // BLUE
 $blue-dark-5: #071d2c;
 $blue-dark-4: #102a3d;
-$blue-dark-3: #112f44;
-$blue-dark-2: #1d445f;
-$blue-dark-1: #274c66;
+$blue-dark-3: #12344C;
+$blue-dark-2: #164D6B;
+$blue-dark-1: #2E6484;
 $blue: #3f7ea0;
 $blue-light-1: #549dc4;
 $blue-light-2: #75b3d4;
