--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,7 +2,7 @@
 @import 'mixins.scss';
 
 .app {
-  background-color: $blue-dark-1;
+  background-color: $blue-light-1;
   height: 100%;
   min-height: 100vh;
   width: 100%;
@@ -78,15 +78,11 @@
   }
   
   &__sidebar {
-    align-items: center;
-    background-color: $blue-dark-3;
+    @include flex-center;
+    background-color: $blue-dark-4;
     bottom: 0;
     box-shadow: 0 0 20px 5px $blue-dark-4;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
     right: 0;
-    overflow: auto;
     position: fixed;
     padding-top: $header-height-xs;
     top: 0;
@@ -125,6 +121,14 @@
         width: $sidebar-width-lg;
       }
     }
+  }
+
+  &__container {
+    display: grid;
+    grid-template-rows: 1fr repeat(2, auto) 1fr;
+    height: 100%;
+    overflow-y: auto;
+    width: 100%;
   }
 
   &__user {
