--- a/app/styles/archiveEntry.scss
+++ b/app/styles/archiveEntry.scss
@@ -16,11 +16,11 @@
   }
 
   &--edit-mode {
-    background-color: $blue-dark-3;
+    background-color: $blue-dark-2;
   }
 
   &:not(:last-child) {
-    border-bottom: 2px solid $blue-dark-3;
+    border-bottom: 2px solid $blue;
   }
   
   &__add {
@@ -54,27 +54,26 @@
   &__button {
     @include button;
     @include primaryButton;
-
     margin-top: 10px;
   }
 
   &__svg {
-    width: 100%;
-    height: 100%;
     pointer-events: none;
+    width: 100%;
   }
   
   &__header {
     transition: color $time-edit-buttons;
   
     &--edit-mode {
-      color: $blue-dark-2;
+      color: $blue-light-2;
     }
   }
   
   &__heading {
-    text-align: left;
     margin: 0;
+    text-align: left;
+    font-weight: 700;
   
     &--day {
       font-weight: bold;
@@ -82,7 +81,7 @@
     }
   
     &--date {
-      color: $blue;
+      color: $blue-light-2;
       font-size: 0.85rem;
       margin-top: 3px;
     }
@@ -90,16 +89,22 @@
   
   &__value {
     @include flex-center;
-    margin: 0;
-    font-weight: bold;
-    width: $cardIcon-size-xs;
-    height: $cardIcon-size-xs;
-    border: 2px solid $blue-light-2;
+    background-color: $blue-light-2;
     border-radius: 50%;
+    color: $blue-dark-1;
+    font-weight: 700;
+    font-size: 1.3em;
+    height: $cardIcon-size-xs;
+    margin: 0;
+    width: $cardIcon-size-xs;
+
+    &--edit-mode {
+      color: $blue-dark-2;
+    }
   
     @media only screen and (min-width: $media-sm) {
-      width: $cardIcon-size-sm;
       height: $cardIcon-size-sm;
+      width: $cardIcon-size-sm;
     }
   }
 }
