--- a/app/styles/cards.scss
+++ b/app/styles/cards.scss
@@ -25,7 +25,7 @@
 
   &__header {
     align-items: center;
-    background-color: $blue;
+    background-color: $blue-light-1;
     border-radius: $br-items;
     display: grid;
     grid-gap: 5px;
@@ -52,7 +52,7 @@
   &__button {
     @include button;
     display: flex;
-    fill: $blue-light-2;
+    fill: $blue-light-3;
     max-width: 30px;
     padding: 0;
     transition: fill $time-hover-effect;
@@ -63,8 +63,16 @@
       visibility: inherit;
     }
 
-    &:hover {
+    &:active {
       fill: $blue-dark-2;
+    }
+
+    @media only screen and (min-width: $media-md) {
+
+      &:focus,
+      &:hover {
+        fill: $blue-dark-2;
+      }
     }
   }
 
