fix(loginBox): fix proper displaying of login and signup boxes

--- a/app/styles/loginBox.scss
+++ b/app/styles/loginBox.scss
@@ -4,7 +4,7 @@
 .loginBox {
   align-content: center;
   display: grid;
-  gap: 15px;
+  gap: 20px;
   grid-template-areas:
     "logo   "
     "label  "
@@ -13,12 +13,8 @@
     "logIn  "
     "signUp ";
   height: 100%;
-  max-width: $newUser-box-maxWidth;
   opacity: 0;
-  padding: 0 20px;
-  padding-top: 20px;
-  position: absolute;
-  top: 0;
+  padding: 20px;
   transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
   visibility: hidden;
   width: 100%;
@@ -54,7 +50,7 @@
 
   &__label {
     color: $blue-dark-1;
-    font-size: 0.8em;
+    font-size: 0.9em;
     font-weight: 700;
     grid-area: label;
     text-align: center;
@@ -98,7 +94,7 @@
     background-color: $blue-dark-5;
     border-radius: 100px;
     color: $blue;
-    font-size: 1.2em;
+    font-size: 1em;
     font-weight: 700;
     line-height: 1.4;
     margin: 0;
