--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -2,8 +2,10 @@
 @import 'mixins.scss';
 
 .app {
+  @include flex-center;
   background-color: $blue-light-1;
   height: 100%;
+  overflow: hidden;
   min-height: 100vh;
   width: 100%;
   
@@ -132,24 +134,29 @@
   }
 
   &__user {
-    align-items: flex-start;
-    background-color: $blue-dark-3;
-    bottom: 0;
-    display: flex;
-    justify-content: center;
-    left: 0;
+    max-width: $newUser-box-maxWidth;
     opacity: 0;
-    position: fixed;
-    right: 0;
-    top: 0;
+    position: relative;
     transition: opacity $newUser-toggle, visibility 0s $newUser-toggle;
     visibility: hidden;
+    width: 100%;
     z-index: 2;
 
     &--visible {
       opacity: 1;
       transition: opacity $newUser-toggle, visibility 0s;
       visibility: visible;
+    }
+
+    &::before {
+      background-color: $blue-dark-3;
+      bottom: 0;
+      content: '';
+      left: 0;
+      position: fixed;
+      right: 0;
+      top: 0;
+      z-index: -1;
     }
   }
   
